--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         HTML-Tidy
-version:      1.04
+version:      1.05_01
 version_from: lib/HTML/Tidy.pm
 installdirs:  site
 requires:
