--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         HTML-Tidy
-version:      1.05_02
+version:      1.06
 version_from: lib/HTML/Tidy.pm
 installdirs:  site
 requires:
@@ -10,4 +10,4 @@ requires:
     Test::More:                    0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.26
+generated_by: ExtUtils::MakeMaker version 6.28
