--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,27 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         HTML-Tidy
-version:      1.08
-version_from: lib/HTML/Tidy.pm
-installdirs:  site
+--- #YAML:1.0
+name:               HTML-Tidy
+version:            1.50
+abstract:           (X)HTML validation in a Perl object
+author:
+    - Andy Lester <andy@petdance.com>
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    Carp:                          0
-    constant:                      0
-    Exporter:                      0
-    overload:                      0
-    Test::Builder:                 0
-    Test::More:                    0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+    Carp:           0
+    constant:       0
+    Exporter:       0
+    overload:       0
+    Test::Builder:  0
+    Test::More:     0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.54
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
